k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-service
  labels:
    app: cat-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cat-service
  template:
    metadata:
      labels:
        app: cat-service
    spec:
      containers:
        - name: cat-service
          image: salemisntend/cat-services:1.0.0
          ports:
            - containerPort: 8080
