k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cat-service
spec:
  selector:
    app: cat-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
